--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ repository          : YoussefRaafatNasry/portfolYOU    # repository metadata on 
 ### Author Info ###
 author:
   name              : Vitor Neves
-  image             : https://bit.ly/2KCvgVJ
+  image             : /photos/eu.jpeg
   behance           : your_username
 # dribbble          : your_username
   email             : j.victtor.neves@hotmail.com
