--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ repository          : YoussefRaafatNasry/portfolYOU    # repository metadata on 
 author:
   name              : Vitor Neves
   image             : /photos/eu.jpeg
-# behance           : your_username
+  behance           : your_username
 # dribbble          : your_username
   email             : j.victtor.neves@hotmail.com
   facebook          : jvfneves
