--- a/_data/social-media.yml
+++ b/_data/social-media.yml
@@ -41,10 +41,10 @@ linkedin:
   icon  : fab fa-linkedin-in
   color : 007bb5
 
-medium:
-  url   : https://medium.com/@
-  icon  : fab fa-medium
-  color : 00ab6c
+# medium:
+#   url   : https://medium.com/@
+#   icon  : fab fa-medium
+#   color : 00ab6c
 
 soundcloud:
   url   : https://www.soundcloud.com/
@@ -71,10 +71,10 @@ twitch:
   icon  : fab fa-twitch
   color : 6441a5
 
-twitter:
-  url   : https://www.twitter.com/
-  icon  : fab fa-twitter
-  color : 1da1f2
+# twitter:
+#   url   : https://www.twitter.com/
+#   icon  : fab fa-twitter
+#   color : 1da1f2
 
 vimeo:
   url   : https://www.vimeo.com/
