--- a/_config.yml
+++ b/_config.yml
@@ -35,12 +35,12 @@ author:
 
 
 ### Pagination ###
-paginate: 6
-paginate_path: "/articles/page-:num/"
+# paginate: 6
+# paginate_path: "/articles/page-:num/"
 
 
-### Posts Permalink ###
-permalink: articles/:title
+# ### Posts Permalink ###
+# permalink: articles/:title
 
 
 ### Collections ###
