--- a/_config.yml
+++ b/_config.yml
@@ -44,19 +44,19 @@ author:
 
 
 ### Collections ###
-# collections:
-#   projects:
-#     output: true
-#     permalink: /projects/:name
+collections:
+  projects:
+    output: true
+    permalink: /projects/:name
 
 
-# ### Defaults for collections ###
-# defaults:
-#   - scope:
-#       path: ""
-#       type: "projects"
-#     values:
-#       layout: "page"
+### Defaults for collections ###
+defaults:
+  - scope:
+      path: ""
+      type: "projects"
+    values:
+      layout: "page"
 
 
 ### Exclude from processing ###
