--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,11 +1,11 @@
 - title: Faculdades Metropolitanas Unidas (FMU) - Jogos Digitais
   from: 2019
   to: present
-  description: "Acabando em julho de 2021, A FMU é uma faculdade que me faz crescer muito pessoalmente e profissionalmente. Há professores muito bom que atuam no mercado de trabalho.
+  description: 'Acabando em julho de 2021, A FMU é uma faculdade que me faz crescer muito pessoalmente e profissionalmente. Há professores muito bom que atuam no mercado de trabalho.
 Estou conseguindo evoluir minhas qualidades técnicas e pessoais atualmente, isso graças aos meus professores.
  	A Instituição fornece eventos que agrega bastante valor e experiências aos alunos como: Workshop, Palestras, Hackathon, Game jam, feiras entre outros. 
 Os que mais gosto é Hackathon e Game jam, onde os alunos formam equipes e precisam iniciar um projeto que variam de 2 a 7 dias. 
-O Game jam é o mesmo processo, porém, o projeto é um jogo, Essa experiência é ótima para os alunos porque além de saberem trabalhar em equipe, enriquecerão seus currículos com projetos."
+O Game jam é o mesmo processo, porém, o projeto é um jogo, Essa experiência é ótima para os alunos porque além de saberem trabalhar em equipe, enriquecerão seus currículos com projetos.'
 
 
 
