--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,4 +1,4 @@
-- title: Faculdades Metropolitanas Unidas (FMU) - Jogos Digitais
+- title: 'Faculdades Metropolitanas Unidas (FMU) - Jogos Digitais'
   from: 2019
   to: present
   description: 'Acabando em julho de 2021, A FMU é uma faculdade que me faz crescer muito pessoalmente e profissionalmente. Há professores muito bom que atuam no mercado de trabalho.
