--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,7 +1,7 @@
 - title: Faculdades Metropolitanas Unidas (FMU) - Jogos Digitais
   from: 2019
   to: present
-  description:  Acabando em julho de 2021, A FMU é uma faculdade que me faz crescer muito pessoalmente e profissionalmente. Há professores muito bom que atuam no mercado de trabalho.
+  description:  Acabando em julho de 2021, A FMU é uma faculdade que me faz crescer muito pessoalmente e profissionalmente, Há professores muito bom que atuam no mercado de trabalho.
   description2: Estou conseguindo evoluir minhas qualidades técnicas e pessoais atualmente, isso graças aos meus professores.
   description3: A Instituição fornece eventos que agrega bastante valor e experiências aos alunos como, Workshop, Palestras, Hackathon, Game jam, feiras entre outros.
   description4: Os que mais gosto é Hackathon e Game jam, onde os alunos formam equipes e precisam iniciar um projeto que variam de 2 a 7 dias.
@@ -13,7 +13,7 @@
   description:  Por volta dos meus 14 anos comecei a pesquisar quais áreas iria seguir profissionalmente.
   description2: Através de pesquisas e testes vocacionais, as três opções que mais me chamava atenção era, Medicina, Engenharia e TI.
   description3: Aos 17 anos escolhi participar de um concurso para concorrer a uma das 40 vagas em Técnico em Informática na Etec de Praia Grande e fui aprovado.
-  description4: Foi uma grande experiência, tanto profissional quanto pessoal, Pelo turno ser de manhã após acabar o ensino médio conseguia ficar mais tempo no prédio da Etec, onde inclusive era o mesmo da faculdade Fatec. 
+  description4: Foi uma grande experiência, tanto profissional quanto pessoal, Pelo turno ser de manhã após acabar o ensino médio conseguia ficar mais tempo no prédio da Etec, onde era o mesmo da faculdade Fatec. 
   description5: Tive bastante dificuldade inicialmente ao tentar aprender lógica e linguagem de programação, porém, isso não foi um impedimento para desistir ou até mesmo achar que não era capaz. 
   description6: De tanto persistir acabei superando essa dificuldade e acabei me apaixonando pela programação.
   description7: Com muito esforço e dedicação fui o melhor aluno do último módulo, tive a maior progressão em todos os módulos e participei do grupo que desenvolveu o melhor TCC do curso de todos os turnos. 
