--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,12 @@ author:
   facebook          : jvfneves
   github            : VitorNevess
 # gitlab            : your_username
-# instagram         : your_username
+  instagram         : vitor_nevess_
   linkedin          : vitorneves0
-  medium            : your_username
+  medium            : j.victtor.neves
 # soundcloud        : your_username
 # spotify           : your_username
-# stackoverflow     : your_user_id
+  stackoverflow     : 170027
 # tumblr            : your_username.tumblr.com
 # twitch            : your_username
   twitter           : your_username
