--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   medium            : j.victtor.neves
 # soundcloud        : your_username
 # spotify           : your_username
-  stackoverflow     : 170027
+  stackoverflow     : 10040440
 # tumblr            : your_username.tumblr.com
 # twitch            : your_username
   twitter           : your_username
