--- a/_data/social-media.yml
+++ b/_data/social-media.yml
@@ -41,10 +41,10 @@ linkedin:
   icon  : fab fa-linkedin-in
   color : 007bb5
 
-# medium:
-#   url   : https://medium.com/@
-#   icon  : fab fa-medium
-#   color : 00ab6c
+medium:
+  url   : https://medium.com/@
+  icon  : fab fa-medium
+  color : 00ab6c
 
 soundcloud:
   url   : https://www.soundcloud.com/
