--- a/_data/social-media.yml
+++ b/_data/social-media.yml
@@ -1,10 +1,10 @@
 # Get Icons  from : https://fontawesome.com/icons
 # Get Colors from : https://brandcolors.net/
 
-# behance:
-#   url   : https://www.behance.net/
-#   icon  : fab fa-behance
-#   color : 1769ff
+behance:
+  url   : https://www.behance.net/
+  icon  : fab fa-behance
+  color : 1769ff
 
 dribbble:
   url   : https://dribbble.com/
@@ -71,10 +71,10 @@ twitch:
   icon  : fab fa-twitch
   color : 6441a5
 
-# twitter:
-#   url   : https://www.twitter.com/
-#   icon  : fab fa-twitter
-#   color : 1da1f2
+twitter:
+  url   : https://www.twitter.com/
+  icon  : fab fa-twitter
+  color : 1da1f2
 
 vimeo:
   url   : https://www.vimeo.com/
