--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,6 +1,6 @@
 - title: Faculdades Metropolitanas Unidas (FMU) - Jogos Digitais
   from: 2019
-  to: 2021
+  to: presente
   description:  Acabando em julho de 2021, a FMU é uma faculdade que me faz crescer muito pessoalmente e profissionalmente, há professores muito bons que atuam no mercado de trabalho.
   description2: Estou conseguindo evoluir minhas qualidades técnicas e pessoais atualmente, isso graças aos meus professores.
   description3: A Instituição fornece eventos que agregam bastante valor e experiências aos alunos como, Workshop, Palestras, Hackathon, Game jam, feiras entre outros.
