--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -3,15 +3,15 @@
   to: presente
   description:  Acabando em julho de 2021, a FMU é uma faculdade que me faz crescer muito pessoalmente e profissionalmente, há professores muito bons que atuam no mercado de trabalho.
   description2: Estou conseguindo evoluir minhas qualidades técnicas e pessoais atualmente, isso graças aos meus professores.
-  description3: A Instituição fornece eventos que agregam bastante valor e experiências aos alunos como, Workshop, Palestras, Hackathon, Game jam, feiras entre outros.
-  description4: Os que mais gosto é Hackathon e Game jam, onde os alunos formam equipes e precisam iniciar um projeto que variam de 2 a 7 dias.
-  description5: O Game jam é o mesmo processo, porém, o projeto é um jogo. Essa experiência é ótima para os alunos porque além de saberem trabalhar em equipe, enriqueceram seus currículos com projetos.
+  description3: A Instituição fornece eventos que agregam bastante valor e experiências aos alunos como Workshop, Palestras, Hackathon, Game Jam, feiras entre outros.
+  description4: Os que mais gosto é Hackathon e Game Jam, onde os alunos formam equipes e precisam iniciar um projeto que variam de 2 a 7 dias.
+  description5: O Game Jam é o mesmo processo, porém, o projeto é um jogo. Essa experiência é ótima para os alunos porque além de saberem trabalhar em equipe, enriquecerão seus currículos com projetos.
 
 - title: Etec de Praia Grande - Técnico em Informática
   from: 2015
   to: 2016
   description:  Por volta dos meus 14 anos comecei a pesquisar quais áreas iria seguir profissionalmente.
-  description2: Através de pesquisas e testes vocacionais, as três opções que mais me chamava atenção era, Medicina, Engenharia e TI.
+  description2: Através de pesquisas e testes vocacionais, as três opções que mais me chamava atenção era Medicina, Engenharia e TI.
   description3: Aos 17 anos escolhi participar de um concurso para concorrer a uma das 40 vagas em Técnico em Informática na Etec de Praia Grande e fui aprovado.
   description4: Foi uma grande experiência, tanto profissional quanto pessoal. Pelo turno ser de manhã após acabar o ensino médio conseguia ficar mais tempo no prédio da Etec, onde era o mesmo da faculdade Fatec. 
   description5: Tive bastante dificuldade inicialmente ao tentar aprender lógica e linguagem de programação, porém, isso não foi um impedimento para desistir ou até mesmo achar que não era capaz. 
