--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author:
   facebook          : jvfneves
   github            : VitorNevess
 # gitlab            : your_username
-  instagram         : vitor_nevess_
+  instagram         : jo_vitorneves
   linkedin          : vitorneves0
   medium            : j.victtor.neves
 # soundcloud        : your_username
