--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@ author:
   image             : /photos/eu.jpeg
 # behance           : your_username
 # dribbble          : your_username
-  email             : j.victtor.neves@hotmail.com
-  facebook          : jvfneves
-  github            : VitorNevess
+  # email             : 
+  # facebook          : 
+  github            : jovitorneves
 # gitlab            : your_username
-  instagram         : jo_vitorneves
+  # instagram         : 
   linkedin          : vitorneves0
-  medium            : j.victtor.neves
+  # medium            : 
 # soundcloud        : your_username
 # spotify           : your_username
   stackoverflow     : 10040440
